bynkc/tests/fixtures/positive/253_integration_multi_file_commons_uses/src/money/cents.bynk
commons money {
  fn cents(dollars: Int) -> Int {
    dollars * 100
  }
}
