bynkc/tests/fixtures/negative/294_match_literal_type_mismatch/input.bynk
commons demo {
  fn f(x: Int) -> Int {
    match x {
      "a" => 10
      _   => 0
    }
  }
}
